@startuml
interface com.example.songify.roomdb.CancionDAO {
+ List<Cancion> getAllCanciones()
+ List<Cancion> getAllFavorites()
+ void insertCancion(Cancion)
+ void delete(Cancion)
+ void deleteAll()
+ int update(Cancion)
+ List<Cancion> showRanking()
+ Cancion getCancionPorID(String)
}
class com.example.songify.ui.exitos.Exitos {
- {static} String ARG_PARAM1
- {static} String ARG_PARAM2
- String mParam1
- String mParam2
- RecyclerView recyclerExitos
- RecyclerViewAdapter mAdapter
- RecyclerView.LayoutManager layoutManager
~ List<Cancion> listaExitos
+ {static} Exitos newInstance(String,String)
+ void onCreate(Bundle)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
- void initRecyclerViewCanciones(View)
}
interface com.example.songify.load.OnResponseLoadedListener {
+ void onResponseLoaded(List<Cancion>)
}
class com.example.songify.load.CancionLoaderRunnable {
- InputStream mInFile
- OnResponseLoadedListener mOnResponseLoadedListener
+ void run()
}
class com.example.songify.ui.canciones.Canciones {
- {static} String ARG_PARAM1
- {static} String ARG_PARAM2
- String mParam1
- String mParam2
- RecyclerView recyclerCanciones
- RecyclerViewAdapter mAdapter
- RecyclerView.LayoutManager layoutManager
~ List<Cancion> listaCanciones
+ {static} Canciones newInstance(String,String)
+ void onCreate(Bundle)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
- void initRecyclerViewCanciones(View)
}
interface com.example.songify.retrofit.CancionesService {
~ Call<List<Cancion>> getAllCanciones()
}
class com.example.songify.roomdb.Cancion {
- String platform
- String id
- String title
- String artist
- String artistLink
- String album
- String albumLink
- String isrc
- String duration
- String trackLink
- String preview
- String picture
- Integer addedDate
- String position
- List<Object> shareUrls
- boolean isFavorito
+ String getPlatform()
+ void setPlatform(String)
+ String getId()
+ void setId(String)
+ String getTitle()
+ void setTitle(String)
+ String getArtist()
+ void setArtist(String)
+ String getArtistLink()
+ void setArtistLink(String)
+ String getAlbum()
+ void setAlbum(String)
+ String getAlbumLink()
+ void setAlbumLink(String)
+ String getIsrc()
+ void setIsrc(String)
+ String getDuration()
+ void setDuration(String)
+ String getTrackLink()
+ void setTrackLink(String)
+ String getPreview()
+ void setPreview(String)
+ String getPicture()
+ void setPicture(String)
+ Integer getAddedDate()
+ void setAddedDate(Integer)
+ String getPosition()
+ void setPosition(String)
+ List<Object> getShareUrls()
+ void setShareUrls(List<Object>)
+ boolean isFavorito()
+ void setFavorito(boolean)
+ String toString()
}
abstract class com.example.songify.roomdb.CancionDatabase {
- {static} CancionDatabase INSTANCE
+ {static} CancionDatabase getInstance(Context)
+ {abstract}CancionDAO getDao()
}
class com.example.songify.MainActivity {
- AppBarConfiguration mAppBarConfiguration
- Object BottomNavigationView
~ List<Cancion> listaCanciones
# void onCreate(Bundle)
+ boolean onCreateOptionsMenu(Menu)
+ boolean onOptionsItemSelected(MenuItem)
+ void fillLista()
}
class com.example.songify.retrofit.CancionesNetworkLoaderRunnable {
- OnResponseLoadedListener mOnCancionesLoadedListener
+ void run()
}
class com.example.songify.ReproductorActivity {
- TextView nombreCancion
- TextView nombreArtista
- ImageView ivcaratula
- ImageView atras
- ImageView adelante
- ImageView play
- ImageView stop
- ImageView repeat
- SeekBar seekBar
- TextView duracionActual
- TextView duracionTotal
- String url_cancion
- MediaPlayer mediaPlayer
- List<Cancion> listaCanciones
- boolean firstTime
~ Runnable runnable
~ Handler handler
~ int minutes
~ Cancion cancion
# void onCreate(Bundle)
+ boolean onOptionsItemSelected(MenuItem)
- void reproducir()
- void updateSeekBar()
}
class com.example.songify.AppExecutors {
- {static} Object LOCK
- {static} AppExecutors sInstance
- Executor diskIO
- Executor mainThread
- Executor networkIO
+ {static} AppExecutors getInstance()
+ Executor diskIO()
+ Executor mainThread()
+ Executor networkIO()
}
class com.example.songify.AppExecutors.MainThreadExecutor {
- Handler mainThreadHandler
+ void execute(Runnable)
}
class com.example.songify.ui.favoritos.Favoritos {
- {static} String ARG_PARAM1
- {static} String ARG_PARAM2
- String mParam1
- String mParam2
- RecyclerView recyclerFavoritos
- RecyclerViewAdapter mAdapter
- RecyclerView.LayoutManager layoutManager
~ List<Cancion> listaFavoritos
+ {static} Favoritos newInstance(String,String)
+ void onCreate(Bundle)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
- void initRecyclerViewCanciones(View)
}
class com.example.songify.RecyclerViewAdapter {
~ List<Cancion> cancionList
~ Context context
- View.OnClickListener listener
+ MyViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(MyViewHolder,int)
+ int getItemCount()
+ void setOnClickListener(View.OnClickListener)
+ void onClick(View)
+ void swap(List<Cancion>)
}
class com.example.songify.RecyclerViewAdapter.MyViewHolder {
~ ImageView iv_cancion
~ TextView tv_titulo
~ TextView tv_artista
~ TextView tv_duracion
~ ImageView btn_fav
}


androidx.fragment.app.Fragment <|-- com.example.songify.ui.exitos.Exitos
com.example.songify.load.Runnable <|.. com.example.songify.load.CancionLoaderRunnable
androidx.fragment.app.Fragment <|-- com.example.songify.ui.canciones.Canciones
java.io.Serializable <|.. com.example.songify.roomdb.Cancion
androidx.room.RoomDatabase <|-- com.example.songify.roomdb.CancionDatabase
androidx.appcompat.app.AppCompatActivity <|-- com.example.songify.MainActivity
com.example.songify.retrofit.Runnable <|.. com.example.songify.retrofit.CancionesNetworkLoaderRunnable
androidx.appcompat.app.AppCompatActivity <|-- com.example.songify.ReproductorActivity
com.example.songify.AppExecutors +.. com.example.songify.AppExecutors.MainThreadExecutor
com.example.songify.Executor <|.. com.example.songify.AppExecutors.MainThreadExecutor
androidx.fragment.app.Fragment <|-- com.example.songify.ui.favoritos.Favoritos
com.example.songify.OnClickListener <|.. com.example.songify.RecyclerViewAdapter
com.example.songify.Adapter <|-- com.example.songify.RecyclerViewAdapter
com.example.songify.RecyclerViewAdapter +.. com.example.songify.RecyclerViewAdapter.MyViewHolder
com.example.songify.ViewHolder <|-- com.example.songify.RecyclerViewAdapter.MyViewHolder
@enduml